# rct-github-intro

./: .gitignore  Makefile  Makefile_R  Makefile_python  README.md  README.qmd  pyproject.toml  requirements.txt  to_dos.md
.devcontainer/: Dockerfile  devcontainer.json
code/python/: do_analysis.py  prep_data.py  prepare_data.py  pull_data.py  pull_wrds_data.py  run_analysis.py  utils.py
config/: global_cfg.yaml
data/: data_readme.md
doc/: .gitignore  paper.qmd  paper_python.qmd  paper_r.qmd
info/: LLM_ASSISTANT_SPEC.txt
