[project]
name = "rct-project-template"
version = "0.1.0"
description = "A barebones Python template for reproducible project workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0,<2",
    "pandas>=2.2,<3",
    "plotnine>=0.13,<1",
    "statsmodels>=0.14,<1",
]

[tool.uv]
package = false
